fix scale operator output relation

--- a/.tercen/project.json
+++ b/.tercen/project.json
@@ -25,6 +25,6 @@
   "kind": "Url",
   "uri": "https://github.com/pamgene/ttest_app"
  },
- "version": "0ae72a57261c4e0bc343b0f92845c188bdbeb446",
+ "version": "0.3.6",
  "isPublic": false
 }
